<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="previous_song">Previous</string>
    <string name="next_song">Next</string>
    <string name="play_song">Play</string>
    <string name="pause_song">Pause</string>
    <string name="song_time">00:00</string>
    <string name="song_title">Title</string>
    <string name="song_artist">Artist</string>
    <string name="song_album">Album</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>
