<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:id="@+id/layoutBody">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="2" android:id="@+id/fragmentContainer">

    </FrameLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="bottom" android:layout_weight="6">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/seekBar" android:layout_weight="1"
                    android:layout_marginLeft="5dp" android:layout_gravity="center"
                    android:theme="@style/Widget.AppCompat.SeekBar"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvTime" tools:text="@string/song_time"
                    android:layout_marginRight="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="15sp"
                    android:layout_marginLeft="5dp" android:layout_gravity="center_horizontal"
                    android:text="@string/song_time"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp">
            <Button
                    android:text="@string/previous_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bPrevious" android:layout_weight="1"
                    android:layout_marginLeft="5dp" style="@style/Widget.AppCompat.Button.Colored"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bPlay" android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    tools:text="Play" android:text="@string/play_song"/>
            <Button
                    android:text="@string/next_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bNext" android:layout_weight="1"
                    android:layout_marginLeft="5dp" style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>