<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".music_player" android:id="@+id/layoutBody">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="6">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@mipmap/ic_launcher_round"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/cover" android:layout_weight="1"/>
                <TextView
                        android:text="@string/song_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tvTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:gravity="bottom|center_horizontal" android:padding="5dp"/>
                <TextView
                        android:text="@string/song_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tvArtist"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="25sp"
                        android:gravity="bottom|center_horizontal"/>
                <TextView
                        android:text="@string/song_album"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tvAlbum"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="20sp"
                        android:gravity="bottom|center_horizontal" android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>